# ctest-mpi

./: CMakeLists.txt  README.md  build.sh  environment.yml
.github/workflows/: ci.yml
tests/: CMakeLists.txt  hello-world.c  serial.c
